# ope

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: benchmark_norm.cpp  benchmark_options_pricer.cpp
include/: bsm_pricer.h  option.hpp  option_refactor.hpp
include/qf/datamodels/: option.hpp
include/qf/pricing/options/: option_pricer.hpp
include/qf/stats/dists/: dist.hpp  norm.hpp
scripts/: bench.sh  build.sh  run.sh  test.sh
src/: bsm_pricer.cpp  dist.cpp  main.cpp  norm.cpp  option.cpp  option_pricer.cpp
test/: test_norm.cpp  test_option_pricer.cpp
